fixed type spacing and github link

--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -4,9 +4,6 @@
   background-size: cover;
   height: 35vh;
   width: 100%;
-  position: absolute;
-  bottom: -11rem;
-
 }
 @media laptop {
   .HeroImgContainer {
@@ -53,6 +50,9 @@ label {
     margin: 0;
   }
 }
+.EnterZip {
+  margin: unit8 0;
+}
 .InputZip {
   margin: 0 2rem 0 0;
   border: none;
@@ -75,16 +75,15 @@ label {
 .LandingPageQuote {
   margin: 10rem 4rem 0 4rem;
 }
-  @media laptop {
-    .LandingPageQuote {
-      width: 60%;
-      margin: 8rem 4rem 0 4rem;
-    }
+@media laptop {
+  .LandingPageQuote {
+    width: 60%;
+    margin: 8rem 4rem 0 4rem;
   }
+}
 .SiteCredit {
   font-size: 1.3rem;
-  margin: 17% 0 5rem 4rem;
-
+  margin-top: unit4;
 }
 .BorderBottomBlack {
   border-bottom: 1px solid #000;
