--- a/_resources/_styles/type.styl
+++ b/_resources/_styles/type.styl
@@ -37,15 +37,15 @@ h1,h2,h3,h4,h5,h6 {
 	font-family: 'Iowanoldstyle', serif;
 	font-size: 3rem;
   margin: 7rem 0 0 0;
-  font-size: 4rem;
-  width: 50%;
+  font-size: 13vw;
+  width: 85%;
 }
-  @media laptop {
-    .HeadingLarge {
-      width: 50%;
-      font-size: 4.5vw;
-    }
+@media laptop {
+  .HeadingLarge {
+    width: 50%;
+    font-size: 4.5vw;
   }
+}
 .HeadingMedium {
   font-size: 2.6rem;
   font-family: 'Iowanoldstyle', serif;
